--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/student_create_edit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/student_create_edit.html
@@ -48,6 +48,8 @@
                 </label>
               </div>
               <div class="small-9 columns" tabindex="1">
+                {{ property_order_list.0.1.0 }}
+
                 {% html_widget groupid node.pk property_order_list.0.1.0 %}
               </div>
             </div>
@@ -60,6 +62,7 @@
                 </label>
               </div>
               <div class="small-8 columns">
+                {{property_order_list.0.1.1}}
                 {% html_widget groupid node.pk property_order_list.0.1.1 %}
               </div>
             </div>
@@ -72,6 +75,7 @@
                 </label>
               </div>
               <div class="small-9 columns">
+                {{property_order_list.0.1.2}}
                 {% html_widget groupid node.pk property_order_list.0.1.2 %}
               </div>
             </div>
@@ -100,6 +104,7 @@
                 </label>
               </div>
               <div class="small-8 columns">
+                {{property_order_list.0.1.4}}
                 {% html_widget groupid node.pk property_order_list.0.1.4 %}
               </div>
             </div>
@@ -112,6 +117,7 @@
                 </label>
               </div>
               <div class="small-9 columns">
+                {{property_order_list.0.1.5}}
                 {% html_widget groupid node.pk property_order_list.0.1.5 %}
               </div>
             </div>
