--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcourseDashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gcourseDashboard.html
@@ -11,7 +11,7 @@
                             <div class="small-12 columns course-current-state"> ONGOING SESSION </div>
                         </div>
                         <div class="row">
-                            <div class="small-12 columns"> Taking screenshots of the Work </div>
+                            <div class="small-12 columns"> {{next_session_in_course.0|default_if_none:"Data Not Available"}} </div>
                         </div>
                         <div class="row">
                             <div class="small-12 columns">
@@ -21,12 +21,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="small-12 columns course-progress dash-tile-row">
-                        <label>2 out of 6 modules completed</label>
+
+                    {% if request.user.is_authenticated %}
+                      <div class="small-12 columns course-progress dash-tile-row">
+                        <label>{{completed_count}} out of {{total_count}} modules completed</label>
                         <div class="progress success round">
-                            <div class="meter" style="width: 20%"></div>
+                        <div class="meter" style="width: {{course_complete_percentage}}%"></div>
                         </div>
-                    </div>
+                      </div>
+                    {% endif %}
+
                 </div>
             </div>
             <div class="small-6 columns course-performance dash-tile">
