--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/html_field_widget.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/html_field_widget.html
@@ -260,7 +260,7 @@
         {% endfor %}
       </select>
       <i style="color:red; float:left display:inline">*</i>
-      <small class="error">{% trans "Please select" %} {{field.altnames}}! </small>  
+      {# <small class="error">{% trans "Please select" %} {{field.altnames}}! </small>   #}
 
     {% endif %}
 
