made: If name='filehive' for <input type='file'> then file will get uploaded in filehive via write_files()

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
@@ -88,7 +88,7 @@
                                 <i class="fa fa-upload"></i>
                                 &nbsp;
                                 <span>Upload File</span>
-                                <input type="file" name="doc" id="docFile" style="display: none;"/>
+                                <input type="file" name="filehive" id="docFile" style="display: none;" multiple/>
                             </label>
                             <div class="save_cancel hide">
                               <input type="submit" id="submitpostid" class="tiny button radius" value="Save"/>
